deleteCommentById done
